# coding: utf-8

[project]
name = "prowlarr-py"
version = "0.3.0"
dependencies = [
    "urllib3 >= 1.25.3",
    "python-dateutil",
    "requests>=2.28.1",
    "pydantic>=1.10.2",
    "aenum"
]
description = "Prowlarr API wrapper"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/devopsarr/prowlarr-py"
"Bug Tracker" = "https://github.com/devopsarr/prowlarr-py/issues"